src/test/ui/nll/ty-outlives/impl-trait-outlives.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/impl-trait-outlives.rs:11:5
   |
LL | fn no_region<'a, T>(x: Box<T>) -> impl Debug + 'a
   |                  - help: consider adding an explicit lifetime bound...: `T: 'a`
...
LL |     x
   |     ^

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/impl-trait-outlives.rs:26:5
   |
LL | fn wrong_region<'a, 'b, T>(x: Box<T>) -> impl Debug + 'a
   |                         - help: consider adding an explicit lifetime bound...: `T: 'a`
...
LL |     x
   |     ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0309`.
